--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -6,18 +6,23 @@ LDAP.BaseDN=ou=People,dc=hhmi,dc=org
 
 # Mongo connection settings
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
+# Sometime is preferable to set the server name, the database, the username and password separately
+MongoDB.ServerName=
 MongoDB.Database=jacs
+MongoDB.AuthDatabase=
 MongoDB.FutureDatabase=jacs2
+MongoDB.Username=
+MongoDB.Password=
 MongoDB.ThreadsAllowedToBlockForConnectionMultiplier=10
 MongoDB.ConnectionsPerHost=500
 MongoDB.ConnectTimeout=120000
 MongoDB.MaxWaitTimeInSecs=120
 
-mouselight.db.url=jdbc:mysql://flyportal-db.int.janelia.org:3306/flyportal?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&autoReconnect=true
+mouselight.db.url=jdbc:mariadb://flyportal-db.int.janelia.org:3306/flyportal?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&autoReconnect=true
 mouselight.db.user=
 mouselight.db.password=
 
-sage.db.url=jdbc:mysql://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST&autoReconnect=true
+sage.db.url=jdbc:mariadb://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST&autoReconnect=true
 sage.db.user=
 sage.db.password=
 
