use github as a maven repo
Former-commit-id: 1574d9e7aa33f9f875e714279059012771875e31

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ subprojects {
             mavenLocal()
             mavenCentral()
             maven {
-                url "http://maven.int.janelia.org/nexus/content/groups/public/"
+                url "https://raw.githubusercontent.com/JaneliaSciComp/mvn-repo/master/repository/"
             }
             flatDir {
                 dirs "${rootDir}/projectrepository"
