--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -10,13 +10,14 @@ project(":jacs2-services") {
                 JACKSON_CORE_LIB,
                 JACKSON_DATABIND_LIB,
                 JACKSON_DATATYPE_JODA_LIB,
+                JAMA_LIB,
                 JAX_RS_JERSEY_CLIENT_LIB,
                 JAX_RS_JERSEY_MEDIA_LIB,
                 JAX_RS_JERSEY_MEDIA_JSON_LIB,
                 JAVA_EXP_IMPL_LIB,
+                JAVA_LSF_LIB,
                 MONGODB_DRIVER_LIB,
                 REFLECTIONS_LIB,
-                JAVA_LSF_LIB,
                 SOLR_SEARCH_LIB,
                 SPARK_LAUNCHER
 
@@ -28,7 +29,7 @@ project(":jacs2-services") {
             exclude group: 'com.fasterxml.jackson.core'
         }
 
-        compile JACS_MODEL_UTILS_LIB
+        compile JACS_MODEL_RENDERING_LIB
 
         compile (HIBERNATE_LIB) {
             exclude group: 'javax.transaction'
