update the sample rendering endpoint to use the 2.0 API

--- a/deps.gradle
+++ b/deps.gradle
@@ -90,8 +90,9 @@ dependencies {
 
         // Janelia libraries
         JAVA_LSF_LIB = "org.janelia:java-lsf:1.0.0"
-        JACS_MODEL_CORE_LIB = "org.janelia.jacs-model:jacs-model-core:1.1.1"
-        JACS_MODEL_RENDERING_LIB = "org.janelia.jacs-model:jacs-model-rendering:1.1.1"
+        JACS_MODEL_VERSION = "2.0.0"
+        JACS_MODEL_CORE_LIB = "org.janelia.jacs-model:jacs-model-core:${JACS_MODEL_VERSION}"
+        JACS_MODEL_RENDERING_LIB = "org.janelia.jacs-model:jacs-model-rendering:${JACS_MODEL_VERSION}"
 
         // scientific computing
         JAMA_LIB = "gov.nist.math:jama:1.0.3"
