--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,8 +1,12 @@
 jacs.version=DEV
 
 # LDAP Settings
-LDAP.URL=ldap-vip1.int.janelia.org:389
-LDAP.BaseDN=ou=People,dc=hhmi,dc=org
+#LDAP.URL=ldapServerHostname
+#LDAP.SearchBase=ou=People,dc=hhmi,dc=org
+#LDAP.SearchFilter=(cn={{username}})
+#LDAP.BindDN=serviceUser
+#LDAP.BindCredentials=serviceUserPassword
+#JWT.SecretKey=random32bitstring
 
 # Mongo connection settings
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
