switch to new JWT library for compatibility with https://jwt.io

--- a/deps.gradle
+++ b/deps.gradle
@@ -79,7 +79,9 @@ dependencies {
         JAVA_EXP_IMPL_LIB = "org.glassfish:javax.el:3.0.0"
 
         // auth
-        JWT_LIB = "com.nimbusds:nimbus-jose-jwt:5.4"
+        JWT_API = 'io.jsonwebtoken:jjwt-api:0.10.5'
+        JWT_RUNTIME_IMPL = 'io.jsonwebtoken:jjwt-impl:0.10.5'
+        JWT_RUNTIME_JACKSON = 'io.jsonwebtoken:jjwt-jackson:0.10.5'
 
         // cron utils
         CRON_UTILS_LIB = "com.cronutils:cron-utils:7.0.1"
