--- a/jacs2-commonweb/build.gradle
+++ b/jacs2-commonweb/build.gradle
@@ -10,10 +10,12 @@ project(":jacs2-commonweb") {
                 JAX_RS_JERSEY_CORE_LIB,
                 JAX_RS_JERSEY_SERVER_LIB,
                 LDAP_CLIENT_LIB,
-                JWT_LIB,
                 SWAGGER_JAXRS_LIB,
                 UNDERTOW_CORE_LIB,
-                UNDERTOW_SERVLET_LIB
+                UNDERTOW_SERVLET_LIB,
+                JWT_API
+        runtime JWT_RUNTIME_IMPL,
+                JWT_RUNTIME_JACKSON
     }
 
     processResources {
