added support for LSF job groups

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -60,6 +60,7 @@ service.exejob.checkIntervalInMillis=0
 
 service.cluster.checkIntervalInSeconds=5
 service.cluster.requiresAccountInfo=true
+service.cluster.useJobGroup=false
 
 service.maxRunningProcesses=-1
 service.fileCopy.maxRunningProcesses=2
