--- a/jacs2-syncweb/build.gradle
+++ b/jacs2-syncweb/build.gradle
@@ -10,8 +10,9 @@ project(":jacs2-syncweb") {
     dependencies {
         compile project(":jacs2-commonweb"),
                 CDI_SE_CORE_LIB,
-                JAX_RS_JERSEY_CDI_SERVLET_LIB,
-                JAX_RS_JERSEY_INJECT_LIB
+                JACKSON_JAXRS_XML_PROVIDER
+
+        testCompile project(path: ":jacs2-commonweb", configuration: "testArtifacts")
     }
 
     distributions {
