updated default props

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,12 +1,20 @@
 jacs.version=DEV
 
+#
 # LDAP Settings
+# If these are undefined, then local authentication is used instead
+#
 #LDAP.URL=ldapServerHostname
 #LDAP.SearchBase=ou=People,dc=hhmi,dc=org
 #LDAP.SearchFilter=(cn={{username}})
 #LDAP.BindDN=serviceUser
 #LDAP.BindCredentials=serviceUserPassword
-#JWT.SecretKey=random32bitstring
+
+#
+# 32 byte secret key for JWT authentication
+# You can generate one by running `openssl rand -base64 32`
+#
+JWT.SecretKey=
 
 # Mongo connection settings
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
