allow null solr server; remove the default solr config

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -201,5 +201,5 @@ Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
 
 # Solr indexing parameters
-Solr.ServerURL=http://jacs-solr:8890/solr/FlyWorkstation
+Solr.ServerURL=
 Solr.CommitDelayInMillis=5000
