some changes to allow configuring a local directory as a container repository

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -193,12 +193,13 @@ CMTKAlignment.Library.Path=/groups/jacs/jacsHosts/servers/jacs/executables/Qt-4.
 # Lightsheet
 Container.Registry.URL=shub://imagecatcher
 ImageProcessing.Collection={Container.Registry.URL}/imageprocessing
-ImageProcessing.Lightsheet.Version=1.0
+ImageProcessing.Lightsheet.Version=:1.0
 ImageProcessing.Lightsheet.DataMountPoints=
 
 # Singularity
 Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
+Singularity.Image.DefaultExt=
 
 # Solr indexing parameters
 Solr.ServerURL=
