Added a first draft of the deconvolution service that is based on the python script

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -201,6 +201,9 @@ Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
 Singularity.Image.DefaultExt=
 
+Python.Bin.Path=python
+Deconvolution.Script.Path=jacs2_scripts/deconvolution/run-decon-job.py
+
 # Solr indexing parameters
 Solr.ServerURL=
 Solr.CommitDelayInMillis=5000
