created the subtask configs + unit test

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -201,8 +201,8 @@ Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
 Singularity.Image.DefaultExt=
 
-Python.Bin.Path=python
-Deconvolution.Script.Path=jacs2_scripts/deconvolution/run-decon-job.py
+Matlab.Root.Path=/misc/local/matlab-2018b
+Deconvolution.Script.Path=jacs2_scripts/deconvolution/matlab_decon
 
 # Solr indexing parameters
 Solr.ServerURL=
