--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -25,6 +25,10 @@ project(":jacs2-services") {
             exclude group: 'com.fasterxml.jackson.core'
         }
 
+        compile (JACS_MODEL_ACCESS_LIB) {
+            exclude group: 'com.fasterxml.jackson.core'
+        }
+
         compile (JACS_MODEL_CORE_LIB) {
             exclude group: 'com.fasterxml.jackson.core'
         }
