moved search specific classes to model library and refactored indexing service

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -209,4 +209,5 @@ Deconvolution.Script.Path=jacs2_scripts/deconvolution/matlab_decon
 
 # Solr indexing parameters
 Solr.ServerURL=
+Solr.BatchSize=100
 Solr.CommitDelayInMillis=5000
