async indexer based on message sender

--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -35,6 +35,8 @@ project(":jacs2-services") {
 
         compile JACS_MODEL_RENDERING_LIB
 
+        compile JACS_MESSAGING_CORE_LIB
+
         compile (HIBERNATE_LIB) {
             exclude group: 'javax.transaction'
         }
