added messagin config properties

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -211,3 +211,9 @@ Deconvolution.Script.Path=jacs2_scripts/deconvolution/matlab_decon
 Solr.ServerURL=
 Solr.BatchSize=100
 Solr.CommitDelayInMillis=5000
+
+# Messaging parameters
+Messaging.Server=
+Messaging.User=
+Messaging.Password=
+Messaging.AsyncIndexingQueue=DocIndexing
