--- a/jacs2-commonweb/build.gradle
+++ b/jacs2-commonweb/build.gradle
@@ -6,7 +6,7 @@ project(":jacs2-commonweb") {
                 JACKSON_JAXRS_JSON_PROVIDER,
                 JAVAX_SERVLET_API_LIB,
                 JAX_RS_API_LIB,
-                JAX_RS_JERSEY_CDI_SERVLET_LIB,
+//                JAX_RS_JERSEY_CDI_SERVLET_LIB,
                 JAX_RS_JERSEY_CONTAINERS_LIB,
                 JAX_RS_JERSEY_CORE_LIB,
                 JAX_RS_JERSEY_INJECT_LIB,
