change it to allow concurrent update and use a swappable build core

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -209,8 +209,12 @@ Deconvolution.Script.Path=jacs2_scripts/deconvolution/matlab_decon
 
 # Solr indexing parameters
 Solr.ServerURL=
-Solr.BatchSize=100
-Solr.CommitDelayInMillis=5000
+Solr.MainCore=FlyWorkstation
+Solr.BuildCore=FlyWorkstationBuild
+Solr.LoaderQueueSize=100
+Solr.LoaderThreadCount=2
+Solr.BatchSize=20000
+Solr.CommitDelayInMillis=500
 
 # Messaging parameters
 Messaging.Server=
