--- a/deps.gradle
+++ b/deps.gradle
@@ -96,11 +96,11 @@ dependencies {
 
         // Janelia libraries
         JAVA_LSF_LIB = "org.janelia:java-lsf:1.0.0"
-        JACS_MODEL_VERSION = "2.1.0-SNAPSHOT"
+        JACS_MODEL_VERSION = "2.1.0"
         JACS_MODEL_CORE_LIB = "org.janelia.jacs-model:jacs-model-core:${JACS_MODEL_VERSION}"
         JACS_MODEL_ACCESS_LIB = "org.janelia.jacs-model:jacs-model-access:${JACS_MODEL_VERSION}"
         JACS_MODEL_RENDERING_LIB = "org.janelia.jacs-model:jacs-model-rendering:${JACS_MODEL_VERSION}"
-        JACS_MESSAGING_VERSION = "2.0.0-SNAPSHOT"
+        JACS_MESSAGING_VERSION = "2.0.0"
         JACS_MESSAGING_CORE_LIB = "org.janelia.jacs-messaging:jacs-messaging-core:${JACS_MESSAGING_VERSION}"
 
         // scientific computing
