--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -214,6 +214,7 @@ Solr.BuildCore=FlyWorkstationBuild
 Solr.LoaderQueueSize=100
 Solr.LoaderThreadCount=2
 Solr.BatchSize=20000
+Solr.CommitSize=200000
 Solr.CommitDelayInMillis=500
 
 # Messaging parameters
