--- a/jacs2-syncweb/build.gradle
+++ b/jacs2-syncweb/build.gradle
@@ -29,4 +29,16 @@ project(":jacs2-syncweb") {
             }
         }
     }
+
+    tasks.withType(CreateStartScripts).each { task ->
+        task.doLast {
+            task.windowsScript.write task.windowsScript.text.replaceFirst(/(set CLASSPATH=%APP_HOME%\\lib\\).*/, {
+                "${it[1]}*"
+            })
+            task.unixScript.write task.unixScript.text.replaceFirst(/(CLASSPATH=.APP_HOME\/lib\/).*/, {
+                "CLASSPATH=\$(echo \$APP_HOME/lib/*.jar | tr ' ' ':')"
+            })
+        }
+    }
+
 }
