--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -38,9 +38,7 @@ sage.db.url=jdbc:mariadb://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedSt
 sage.db.user=
 sage.db.password=
 
-LSF.PAC.URL=https://lsf-pac:8443
-LSF.user=
-LSF.password=
+AccessLog.OmittedHeaders=Authorization,Accept,Cache-Control,Pragma,Connection
 
 TimebasedIdentifierGenerator.DeploymentContext=0
 
