pulled out the request body source conduit to its own file so that it can be unit tested; configurable save request body; auth headers case insensitive

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -39,6 +39,7 @@ sage.db.user=
 sage.db.password=
 
 AccessLog.OmittedHeaders=Authorization,Accept,Cache-Control,Pragma,Connection
+AccessLog.WithRequestBody=true
 
 TimebasedIdentifierGenerator.DeploymentContext=0
 
