Changed the key name

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -15,6 +15,8 @@ jacs.version=DEV
 # You can generate one by running `openssl rand -base64 32`
 #
 JWT.SecretKey=
+# JACS API Key
+JACS.ApiKey=
 
 # Mongo connection settings
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
@@ -80,6 +82,7 @@ service.lsmFileMetadata.defaultProcessingLocation=LOCAL
 Dataset.Storage.DefaultVolume=nrsFilestore
 
 StorageService.URL=http://jacs-dev.int.janelia.org:8880/jacsstorage/master_api/v1
+# JADE API Key
 StorageService.ApiKey=
 
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
