Set the subjectname to a configurable property when APIKEY is used

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -17,6 +17,7 @@ jacs.version=DEV
 JWT.SecretKey=
 # JACS API Key
 JACS.ApiKey=
+JACS.SystemAppUserName=system:jacs
 
 # Mongo connection settings
 MongoDB.ConnectionURL=mongodb://localhost:27017/?maxPoolSize=20&maxIdleTimeMS=500
