limit the size of the logged request body

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -43,6 +43,7 @@ sage.db.password=
 
 AccessLog.OmittedHeaders=Authorization,Accept,Cache-Control,Pragma,Connection
 AccessLog.WithRequestBody=true
+AccessLog.MaxRequestBody=512
 
 TimebasedIdentifierGenerator.DeploymentContext=0
 
