default processor is self queue id

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -64,7 +64,7 @@ service.queue.id={env.HOSTNAME}
 service.queue.MaxCapacity=100
 service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
-service.defaultProcessor.queue.id=
+service.defaultProcessor.queue.id={service.queue.id}
 
 service.exejob.checkIntervalInMillis=0
 
