added new -q spark32 flag

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -92,6 +92,7 @@ Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs-data4/executables
 service.spark.sparkVersion=2.3.1
 service.spark.sparkHomeDir=/misc/local/spark-{service.spark.sparkVersion}
 service.spark.lsf.application=spark32
+service.spark.lsf.spec=-q spark32
 service.spark.lsf.remoteCommand=commandstring
 service.spark.nodeSlots=32
 service.spark.driver.memory=1g
