--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -1,4 +1,4 @@
-jacs.version=8.1.2
+jacs.version=8.1.3
 
 #
 # LDAP Settings
@@ -64,7 +64,7 @@ service.queue.id={env.HOSTNAME}
 service.queue.MaxCapacity=100
 service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
-service.defaultProcessor.queue.id=
+service.defaultProcessor.queue.id={service.queue.id}
 
 service.exejob.checkIntervalInMillis=0
 
@@ -108,7 +108,7 @@ hadoop.homeDir=/misc/local/hadoop-2.6.4
 service.colorDepthSearch.searchTimeoutInSeconds=3600
 service.colorDepthSearch.minNodes=1
 service.colorDepthSearch.maxNodes=8
-service.colorDepthSearch.maxResultsPerMask=500
+service.colorDepthSearch.maxResultsPerMask=200
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-1.0-jar-with-dependencies.jar
 service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
 
