--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -16,6 +16,7 @@ project(":jacs2-services") {
                 JAX_RS_JERSEY_MEDIA_JSON_LIB,
                 JAVA_EXP_IMPL_LIB,
                 JAVA_LSF_LIB,
+                JAVAMAIL_LIB,
                 MONGODB_DRIVER_LIB,
                 REFLECTIONS_LIB,
                 SOLR_SEARCH_LIB,
