empty defaults for email notifications

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -227,3 +227,10 @@ Messaging.User=
 Messaging.Password=
 Messaging.AsyncIndexingExchange=DocIndexUpdates
 Messaging.AsyncIndexingRoutingKey=
+
+service.email.senderEmail=
+service.email.senderPassword=
+service.email.authRequired=
+service.email.enableTLS=
+service.email.smtpHost=
+service.email.smtpPort=
