--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -2,6 +2,7 @@ project(":jacs2-services") {
     dependencies {
         compile CDI_API_LIB,
                 CMDLINE_ARG_LIB,
+                COMMOCOMPRESS_LIB,
                 CRON_UTILS_LIB,
                 DBCP_LIB,
                 HTTP_CLIENT_LIB,
