handle all channels for lv import

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -212,6 +212,10 @@ Matlab.X11Lib.RelativePath=X11/app-defaults
 
 Deconvolution.Script.Path=jacs2_scripts/deconvolution/matlab_decon
 
+service.ktxCreator.containerImage=docker://registry.int.janelia.org/jacs-scripts/pyktx:1.0
+
+service.octreeCreator.containerImage=docker://registry.int.janelia.org/jacs-scripts/octree:1.0
+
 # Solr indexing parameters
 Solr.ServerURL=
 Solr.MainCore=FlyWorkstation
