docker requires all bound volumes to have both source and target; if id not set use parentid to create service folder

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -201,6 +201,9 @@ ImageProcessing.Collection={Container.Registry.URL}/imageprocessing
 ImageProcessing.Lightsheet.Version=:1.0
 ImageProcessing.Lightsheet.DataMountPoints=
 
+# Docker
+Docker.Bin.Path=docker
+
 # Singularity
 Singularity.Bin.Path=/usr/bin/singularity
 Singularity.LocalImages.Path={service.DefaultWorkingDir}/containerImages
