--- a/jacs2-commonweb/build.gradle
+++ b/jacs2-commonweb/build.gradle
@@ -1,28 +1,29 @@
 project(":jacs2-commonweb") {
     dependencies {
-        compile project(":jacs2-services"),
-                CDI_SERVLET_LIB,
-                CMDLINE_ARG_LIB,
-                JACKSON_JAXRS_JSON_PROVIDER,
-                JAVAX_SERVLET_API_LIB,
-                JAX_RS_API_LIB,
-                JAX_RS_JERSEY_CDI_SERVLET_LIB,
-                JAX_RS_JERSEY_CONTAINERS_CORE_LIB,
-                JAX_RS_JERSEY_CONTAINER_LIB,
-                JAX_RS_JERSEY_CORE_LIB,
-                JAX_RS_JERSEY_INJECT_LIB,
-                JAX_RS_JERSEY_SERVER_LIB,
-                LDAP_CLIENT_LIB,
-                SWAGGER_JAXRS_LIB,
-                UNDERTOW_CORE_LIB,
-                UNDERTOW_SERVLET_LIB,
-                JWT_API
+        api project(":jacs2-services"),
+            CDI_SERVLET_LIB,
+            JAVAX_SERVLET_API_LIB,
+            JAX_RS_API_LIB,
+            SWAGGER_JAXRS_LIB
 
-        testCompile JAX_RS_JERSEY_TEST_LIB,
-                    JAX_RS_JERSEY_TEST_PROVIDER_LIB
+        implementation CMDLINE_ARG_LIB,
+                       JACKSON_JAXRS_JSON_PROVIDER,
+                       JAX_RS_JERSEY_CDI_SERVLET_LIB,
+                       JAX_RS_JERSEY_CONTAINERS_CORE_LIB,
+                       JAX_RS_JERSEY_CONTAINER_LIB,
+                       JAX_RS_JERSEY_CORE_LIB,
+                       JAX_RS_JERSEY_INJECT_LIB,
+                       JAX_RS_JERSEY_SERVER_LIB,
+                       JWT_API,
+                       LDAP_CLIENT_LIB,
+                       UNDERTOW_CORE_LIB,
+                       UNDERTOW_SERVLET_LIB
 
-        runtime JWT_RUNTIME_IMPL,
-                JWT_RUNTIME_JACKSON
+        testImplementation JAX_RS_JERSEY_TEST_LIB,
+                           JAX_RS_JERSEY_TEST_PROVIDER_LIB
+
+        runtimeOnly JWT_RUNTIME_IMPL,
+                    JWT_RUNTIME_JACKSON
     }
 
     processResources {
@@ -31,5 +32,6 @@ project(":jacs2-commonweb") {
                     "version": project.version
             ])
         }
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 }
