--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -10,6 +10,13 @@ jacs.version=DEV
 #LDAP.BindDN=serviceUser
 #LDAP.BindCredentials=serviceUserPassword
 
+# LDAP defaults which can be overridden
+LDAP.TimeOut=5000
+LDAP.AttributeFirstName=givenName
+LDAP.AttributeLastName=sn
+LDAP.AttributeEmail=mail
+LDAP.AttributeDistinguishedName=distinguishedname
+
 #
 # 32 byte secret key for JWT authentication
 # You can generate one by running `openssl rand -base64 32`
@@ -234,9 +241,28 @@ Messaging.Password=
 Messaging.AsyncIndexingExchange=DocIndexUpdates
 Messaging.AsyncIndexingRoutingKey=
 
-service.email.senderEmail=
+#service.email.senderEmail=
+#service.email.senderPassword=
+#service.email.authRequired=
+#service.email.enableTLS=
+#service.email.smtpHost=
+#service.email.smtpPort=
+
+service.email.senderEmail=jacs@janelia.hhmi.org
 service.email.senderPassword=
-service.email.authRequired=
-service.email.enableTLS=
-service.email.smtpHost=
-service.email.smtpPort=
+service.email.authRequired=false
+service.email.enableTLS=false
+service.email.smtpHost=mail.hhmi.org
+service.email.smtpPort=25
+
+# Create new filestore location for new users?
+user.newUser.fileStoreCreation=true
+
+# Who to email when a new filestore group is created. This email notifies the DevOps team to create a new disk quota.
+user.newUser.emailNotification.destination=rokickik@janelia.hhmi.org
+
+# Last of group keys to which new users should be automatically added
+user.defaultReadGroups=group:workstation_users,group:flylight
+
+# ListServ subscribtion URL to automatically subscribe new users to a mailing list for announcements
+user.listServ.subscribeUrl=http://listserv.int.janelia.org/mailman/subscribe/janelia-workstation
