better default values

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -256,13 +256,13 @@ service.email.smtpHost=mail.hhmi.org
 service.email.smtpPort=25
 
 # Create new filestore location for new users?
-user.newUser.fileStoreCreation=true
+user.newUser.fileStoreCreation=false
 
 # Who to email when a new filestore group is created. This email notifies the DevOps team to create a new disk quota.
-user.newUser.emailNotification.destination=rokickik@janelia.hhmi.org
+user.newUser.emailNotification.destination=
 
 # Last of group keys to which new users should be automatically added
-user.defaultReadGroups=group:workstation_users,group:flylight
+user.defaultReadGroups=group:workstation_users
 
 # ListServ subscribtion URL to automatically subscribe new users to a mailing list for announcements
-user.listServ.subscribeUrl=http://listserv.int.janelia.org/mailman/subscribe/janelia-workstation
+user.listServ.subscribeUrl=
