--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,11 @@ jobs:
 
       - run: ./gradlew --no-daemon installDist test
 
+      - store_artifacts:
+      	  path: build/reports/tests/test
+	  destination: test-results
+
       - store_test_results:
-          path:
-            - jacs2-services/build/reports/tests/test
-            - jacs2-commonweb/build/reports/tests/test
-            - jacs2-asyncweb/build/reports/tests/test
-            - jacs2-syncweb/build/reports/tests/test
+          path: test-results
+
       
